apps/operators/external-secrets-operator/metrics-service.yaml
# Source: external-secrets/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-metrics
  namespace: external-secrets-operator-system
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: metrics
      name: metrics
  selector:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/instance: external-secrets
